--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@fourlights/strapi-plugin-deep-populate": "^1.10.0",
     "@strapi/plugin-users-permissions": "5.18.1",
     "@strapi/provider-upload-aws-s3": "^5.31.0",
     "@strapi/provider-upload-local": "5.18.1",
